fix(expansion-panel): arrow not centered vertically and incorrect title font weight
* Fixes the arrow in the expansion panel header not being quite centered, due to it being based on a rotated CSS triangle. These changes switch to use an SVG which is much easier to reason about.
* Uses the correct font weight for the panel header's title.

--- a/src/material/expansion/_expansion-theme.scss
+++ b/src/material/expansion/_expansion-theme.scss
@@ -41,7 +41,7 @@
   }
 
   .mat-expansion-panel-header-description,
-  .mat-expansion-indicator::after {
+  .mat-expansion-indicator {
     color: mat-color($foreground, secondary-text);
   }
 
@@ -66,5 +66,9 @@
 
   .mat-expansion-panel-content {
     @include mat-typography-level-to-styles($config, body-1);
+  }
+
+  .mat-expansion-panel-header-title {
+    font-weight: mat-font-weight($config, title);
   }
 }
